gccida/g3/squeeze_notes
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/squeeze_notes/src/jump.c:1007:4: error: expected ';' after expression
rtx v7; // rdi 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/squeeze_notes/src/jump.c:1007:5: error: use of undeclared identifier 'v7'
rtx v7; // rdi 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/squeeze_notes/src/jump.c:1008:4: error: expected ';' after expression
rtx v8; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/squeeze_notes/src/jump.c:1008:5: error: use of undeclared identifier 'v8'
rtx v8; // rdx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/squeeze_notes/src/jump.c:1015:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v6.rtwint = ( __int64)( *endp)[1].fld[0]; 
                      ^~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/squeeze_notes/src/jump.c:1016:1: error: use of undeclared identifier 'v7'
v7 = rtx; 
^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/squeeze_notes/src/jump.c:1023:1: error: use of undeclared identifier 'v8'
v8 = rtx; 
^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/squeeze_notes/src/jump.c:1025:17: error: use of undeclared identifier 'v8'
if ( *( _WORD *)v8 == 37 && ( unsigned int)( v8[2].fld[0].rtint + 98) <= 5 ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/squeeze_notes/src/jump.c:1025:46: error: use of undeclared identifier 'v8'
if ( *( _WORD *)v8 == 37 && ( unsigned int)( v8[2].fld[0].rtint + 98) <= 5 ) 
                                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/squeeze_notes/src/jump.c:1027:6: error: use of undeclared identifier 'v8'
v5 = v8; 
     ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/squeeze_notes/src/jump.c:1032:6: error: use of undeclared identifier 'v7'
if ( v7 == v8 ) 
     ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/squeeze_notes/src/jump.c:1032:12: error: use of undeclared identifier 'v8'
if ( v7 == v8 ) 
           ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/squeeze_notes/src/jump.c:1034:1: error: use of undeclared identifier 'v7'
v7 = rtx; 
^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/squeeze_notes/src/jump.c:1037:16: error: use of undeclared identifier 'v7'
v9 = ( __int64)v7[1]; 
               ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/squeeze_notes/src/jump.c:1038:17: error: use of undeclared identifier 'v8'
v10 = ( __int64)v8[1]; 
                ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/squeeze_notes/src/jump.c:1039:1: error: use of undeclared identifier 'v8'
v8[1].fld[0].rtwint = ( __int64)v7; 
^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/squeeze_notes/src/jump.c:1039:33: error: use of undeclared identifier 'v7'
v8[1].fld[0].rtwint = ( __int64)v7; 
                                ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/squeeze_notes/src/jump.c:1040:14: error: use of undeclared identifier 'v8'
*( _QWORD *)&v8[1] = v9; 
             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/squeeze_notes/src/jump.c:1041:26: error: use of undeclared identifier 'v8'
*( _QWORD *)( v9 + 24) = v8; 
                         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/squeeze_notes/src/obj/jump.o] Error 1
